--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	                <span class="number">11</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="C:\Users\syedf\OneDrive\Desktop\clark-master\file\final resume.pdf" class="btn btn-primary py-3 px-3">My Resume</a></p>
+                <p><a href="https://drive.google.com/file/d/17uoRa3muPUPD6wm8MVIS39naQxNuDkW_/view?usp=sharing" class="btn btn-primary py-3 px-3">My Resume</a></p>
               </div>
 	          </div>
 	        </div>
@@ -188,7 +188,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="C:\Users\syedf\OneDrive\Desktop\clark-master\file\final resume.pdf" class="btn btn-primary py-4 px-5">My Resume</a></p>
+    				<p><a href="https://drive.google.com/file/d/17uoRa3muPUPD6wm8MVIS39naQxNuDkW_/view?usp=sharing" class="btn btn-primary py-4 px-5">My Resume</a></p>
     			</div>
     		</div>
     	</div>
